Fixed richtext image alignment and added toc margin and conditional visibility for documentation pages.
Toc does not get rendered if there is no or just one headline.

--- a/colegend/cms/static/cms/scss/index.scss
+++ b/colegend/cms/static/cms/scss/index.scss
@@ -6,3 +6,14 @@
 .widget-cms-userbar .wagtail-icon-wagtail:before {
   content: "d";
 }
+
+.widget-richtext {
+  .richtext-image {
+    &.right {
+      float: right;
+    }
+    &.left {
+      float: left;
+    }
+  }
+}
