--- a/colegend/static/scss/colegend.scss
+++ b/colegend/static/scss/colegend.scss
@@ -575,6 +575,7 @@ form .CodeMirror-fullscreen {
 .widget-table-of-contents {
   background-color: $main-light;
   padding: 1em;
+  margin: 0 0 1em 1em;
 
   .toc-links {
     padding: 0;
